# cake-log-forwarder

./: CMakeLists.txt  main.cpp
src/: config.json  json.h  listener_constants.cpp  listener_constants.h
src/listener/: log_listener.cpp  log_listener.h  syslog_listener.cpp
src/parser/: parser.cpp  parser.h
